--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Snake</title>
+    <title>Pathfinder Visualizer</title>
   </head>
 
   <body>
