Added menu functionality

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div id="clear_btn" class="unselected_btn">Clear</div>
         </div>
         <div id="bottom_buttons">
-          <div id="start_point_btn" class="selected_btn">Start Point</div>
+          <div id="start_point_btn" class="unselected_btn">Start Point</div>
           <div id="end_point_btn" class="unselected_btn">End Point</div>
           <div id="wall_point_btn" class="unselected_btn">Wall Points</div>
         </div>
